# scientificcalculator

./: .gitignore  Cargo.toml  README.md  blogpost-wordpress.md  blogpost.md  wasm-components.drawio
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml
applications/calculatorpythonapp/: main.py  requirements.txt
applications/calculatorrustapp/: Cargo.toml
applications/calculatorrustapp/src/: main.rs
applications/calculatorrustapp/wit/: world.wit
applications/thecalculatorcli/: Cargo.toml
applications/thecalculatorspin/: Cargo.toml  spin.toml
arithmetic-calculator/: Cargo.toml
arithmetic-calculator/src/: lib.rs
arithmetic-calculator/wit/: world.wit
calculaterstresstest/: Program.cs
components/logaritmic-calculator/: Component.cs
components/moddiv-calculator/: moddiv-calculator.ts
components/statistics-calculator/: app.py
components/trigonometric-calculator/: Cargo.toml
deploy/thecalculatordepl/: deploy.sh  httpscaledobject.yaml  spinapp.yaml
logaritmic-calculater/: Component.cs
logaritmic-calculator/: logaritmic-calculator.csproj
moddiv/: moddiv.ts  package-lock.json  package.json
moddiv-calculator/: package.json  tsconfig.json
moddiv/types/: world.d.ts
spinkubedepl/: README.md
spinkubedepl/manifests/: executor.yaml  spinapp.yaml
the-calculator/: Cargo.toml
thecalculatercli/: .gitignore  Cargo.toml
thecalculaterdepl/: deploy.sh  httpscaledobject.yaml  spinapp.yaml  teardown.sh
thecalculaterspin/: Cargo.toml
thecalculatordepl/: deploy.sh  k3d-config.yaml  teardown.sh
thecalculatorspin/: spin.toml
(+27 files in other folders)
